<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="26dp"
    android:paddingTop="24dp"
    android:paddingBottom="26dp"
    tools:context=".presentation.settings.SettingsFragment">

    <TextView
        style="@style/TextAppearance.OpenRouterClient.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/api_key" />

    <TextView
        style="@style/TextAppearance.OpenRouterClient.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_api_key_hint" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_api_key"
        style="@style/TextAppearance.OpenRouterClient.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/api_key"
        app:boxStrokeColor="@color/light_purple"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:endIconDrawable="@drawable/ic_clear"
        app:endIconMode="clear_text"
        app:endIconTint="@color/light_purple"
        app:hintTextColor="@color/light_purple">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_api_key"
            style="@style/TextAppearance.OpenRouterClient.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_key"
        style="@style/AccentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/save_api_key" />

    <TextView
        style="@style/TextAppearance.OpenRouterClient.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/chat" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_clear_chat"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/dark_red"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/clear_chat_button"
        android:textColor="@color/light_red"
        app:icon="@drawable/ic_clear"
        app:iconSize="14dp"
        app:iconTint="@color/light_red"
        app:rippleColor="@color/red" />

</LinearLayout>
